--- a/mcp-manifest.json
+++ b/mcp-manifest.json
@@ -24,6 +24,14 @@
         "url": "http://llama-service:8000/experiments",
         "method": "GET"
       }
+    },
+    {
+      "name": "get_experiment",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/experiments/{experiment_id}",
+        "method": "GET"
+      }
     }
   ]
 }
