--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^18.2.0",
     "axios": "^1.6.0",
     "socket.io-client": "^4.7.4",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "recharts": "^2.12.7"
   },
   "scripts": {
     "start": "react-scripts start",
