--- a/mcp-manifest.json
+++ b/mcp-manifest.json
@@ -32,6 +32,62 @@
         "url": "http://llama-service:8000/experiments/{experiment_id}",
         "method": "GET"
       }
+    },
+    {
+      "name": "bandit_run",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/bandits/pick",
+        "method": "POST"
+      }
+    },
+    {
+      "name": "log_result",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/bandits/log",
+        "method": "POST"
+      }
+    },
+    {
+      "name": "fetch_metrics",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/bandits/metrics?experiment_id={experiment_id}",
+        "method": "GET"
+      }
+    },
+    {
+      "name": "simulation_run",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/sim/run",
+        "method": "POST"
+      }
+    },
+    {
+      "name": "explain_decision",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/explanations/latest?experiment_id={experiment_id}",
+        "method": "GET"
+      }
+    },
+    {
+      "name": "bandit_create",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/bandits/create",
+        "method": "POST"
+      }
+    },
+    {
+      "name": "get_bandit_stats",
+      "target": {
+        "type": "http",
+        "url": "http://llama-service:8000/bandit-stats",
+        "method": "GET"
+      }
     }
   ]
 }
